fix hover effect on IE 11

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_quick-link-cta.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_quick-link-cta.sass
@@ -37,7 +37,7 @@
         height: 187px
         transition: box-shadow .3s ease
         &:hover
-            box-shadow: 0px 10px 20px #20242B9A
+            box-shadow: 0px 10px 20px rgba(32, 36, 42, .6)
         &__title
             @include breakpoint(desktop, up)
                 font-size: 26px
